--- a/config/database.yml.sample
+++ b/config/database.yml.sample
@@ -20,17 +20,17 @@ default: &default
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
-  username: longest_streak_ranking
+  username: streak_ranking
 
 development:
   <<: *default
-  database: longest_streak_ranking_development_SAMPLE
+  database: streak_ranking_development_SAMPLE
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: longest_streak_ranking
+  #username: streak_ranking
 
   # The password associated with the postgres role (username).
   #password:
@@ -58,7 +58,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: longest_streak_ranking_test_SAMPLE
+  database: streak_ranking_test_SAMPLE
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
